knative-build/runtimes/javascript/tests/error/payload-no-body.http
POST http://localhost:8080/ HTTP/1.1
content-type: application/json

{
}

###
